--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -40,13 +40,29 @@
    font-size: 18px
    line-height: 24px 
    font-weight: 400  
-   padding: 0.5rem 0
+   padding: 0.3rem 0
    color: $light
-
    &.invalid
-      
       border-bottom: 1px solid red 
-      
+
+footer.invalid
+   position: absolute
+   color: red 
+   bottom: -15px
+   margin: 0  
+
+control.invalid
+   position: absolute
+   color: red
+   bottom: -15px
+
+modal.invalid
+   position: absolute
+   color: red  
+   bottom: -17px 
+   
+     
+        
    &--light
       &::placeholder
          opacity: 1
