--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -283,7 +283,8 @@
             flex-direction: column  
         &__info
             order: 1  
-                    
+        &__map
+            height: 255px            
         &__input-group            
             flex-basis: 100%
         &__menu
@@ -291,6 +292,12 @@
         &__title
             font-size: 20px
             line-height: 28px
+            margin-bottom: 46px            
+        &__input
+            padding: 0.3px
+
+        &__wrap
+            padding: 0.5px
     .input
         background-color: transparent
         border: none
