--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -36,13 +36,14 @@
             border-radius: 30px
             margin-bottom: 2rem
     &__form
+        position: relative
         display: flex
         justify-content: space-between
         flex-wrap: wrap
         max-width: 769px
         margin: auto
     &__input-group
-        
+        position: relative
         display: flex
         flex-direction: column
         flex-basis: 30%
@@ -59,6 +60,10 @@
         padding: 1.2857rem 4.785rem
         height: 50px
     &__policy
+        position: relative
+        display: flex
+        flex-direction: column        
+        align-items: center
         flex-basis: 100%
         margin-top: 1.2rem
         &-label
