--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -28,6 +28,7 @@
     &__input
         padding-top: 0.3rem
         &-group
+            position: relative
             display: flex
             flex-direction: column
             flex-basis: 44%
@@ -36,10 +37,18 @@
                 flex-basis: 100%
                 margin-bottom: 2rem
         
-    &__policy
+    &__policy 
+        position: relative 
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center                 
         flex-basis: 100%
         margin-bottom: 3.6rem
-        margin-left: -11px
+        margin-left: -11px 
+        
+         
+         
     &__button
         margin: auto
         font-size: 15px
