--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -42,16 +42,19 @@
         margin: 0 
         margin-bottom: 2rem
     &__form
+        position: relative
         display: flex
         flex-direction: column
     &__input              
         &-group
+            position: relative
             display: flex
             flex-direction: column
             margin-bottom: 3.4rem
         &:last-of-type
             margin-bottom: 0.5px
     &__policy
+        position: relative
         margin-bottom: 2.7rem
     &__button
         align-self: flex-end
