--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Futura Book';
+    font-family: 'Futura BookC';
     src: 
     url('../fonts/FuturaBookC.woff') format('woff'),
     url('../fonts/FuturaBookC.woff2') format('woff2');
