--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,7 +1,16 @@
     
+@media screen and ( max-width: 1370px )
+    .logo
+        &__link
+            margin-right: 2rem
 @media screen and ( max-width: 1330px )
     html
         font-size: 0.8rem
+@media screen and ( max-width: 1260px )
+    .nav
+        &__item
+            margin-right: 2rem
+        
 @media screen and ( max-width: 1215px )
     html
         font-size: 0.7rem
@@ -28,6 +37,13 @@
         &__text
             margin-right: 0
 @media screen and ( max-width: 992px )
+    .phone
+        &:hover
+            border-bottom: 1px solid  $primary
+    .logo
+        &__link
+            &:hover
+                box-shadow: none
     .nav
         display: none
     .hero
@@ -38,7 +54,17 @@
     .card
         &__title
             font-size: 1rem
-
+    .video
+        &__play      
+            &:hover
+                width: 145px
+                height: 145px
+    .button
+        &:hover
+            box-shadow: none 
+        &--primary
+            &:hover
+                box-shadow: 0px 5px 15px rgba($primary, 0.2) 
     
 @media screen and ( max-width: 810px )
     .row
@@ -81,7 +107,7 @@
         
        
 
-@media screen and ( max-width: 570px )
+@media screen and ( max-width: 570px )    
     .contacts
         &__phone
             margin-right: 0
@@ -146,7 +172,7 @@
     .hero
         &__scroll-down
             display: none
-
+    
         
 @media screen and ( max-width: 515px)
     .swiper-slide
@@ -164,9 +190,7 @@
             min-height: 20rem       
     
 @media screen and ( max-width: 440px )
-    .butto
-        &:hover
-            box-shadow: none            
+             
     .swiper-slide
         &__text
             margin-right: 0
@@ -191,13 +215,13 @@
                     display: none
         &.design
             background: $dark
-            color: $light             
+            color: $light 
+            padding-bottom: 0            
                                       
     .hero                      
         margin-top: -2px
         margin-left: -13px
-        height: 536px
-        
+        height: 536px       
         &::after
             background: none
         
@@ -248,9 +272,9 @@
         &__button
             position: relative
             max-width: 340
-            width: 100%  
-            
-            margin-bottom: -20px            
+            width: 100%              
+            margin-bottom: -20px
+                      
             
     .label
         color: rgba(255, 255, 255, 0.5)       
@@ -277,14 +301,21 @@
         &-image
             height: 202px
     .footer 
+        margin-top: -10px
         background: $dark 
         &__content            
             display: flex
             flex-direction: column  
         &__info
-            order: 1  
-        &__map
-            height: 255px            
+            display: flex
+            align-items: center
+            justify-content: center
+            order: 1 
+            padding: 0 
+        &__map                     
+            height: 255px 
+            margin-bottom: 41px 
+            width: 100%          
         &__input-group            
             flex-basis: 100%
         &__menu
@@ -295,9 +326,18 @@
             margin-bottom: 46px            
         &__input
             padding: 0.3px
-
+        &__policy
+            margin-bottom: 47px
+        &__form
+            margin-bottom: 46px
+        &__text
+            margin: 0
+            margin-bottom: 26px
         &__wrap
+            margin: 0
             padding: 0.5px
+        &__button
+            flex-basis: 100%
     .input
         background-color: transparent
         border: none
