--- a/css/style.css
+++ b/css/style.css
@@ -336,15 +336,20 @@ template {
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
     transition: box-shadow 0.3s; }
     .button--primary:hover {
-      box-shadow: none;
       box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.5); }
   .button--outline {
     border: 1px solid #fff;
     background-color: transparent;
     color: #fff; }
 
+.video__play:hover {
+  width: 155px;
+  height: 155px; }
+
 .item--primary {
   color: #E3B873; }
+  .item--primary:hover {
+    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.1); }
 
 .label {
   font-family: "Futura BookC", sans-serif;
@@ -380,18 +385,22 @@ template {
     opacity: 1;
     color: #fff; }
   .input.invalid {
-    border-bottom: 1px solid red; }
+    border-bottom: 1px solid red;
+    margin-bottom: 2px; }
 
 footer.invalid {
   position: absolute;
   color: red;
-  bottom: -15px;
-  margin: 0; }
+  bottom: -28px;
+  margin: 0;
+  font-size: 0.9rem;
+  margin: 5px; }
 
 control.invalid {
   position: absolute;
   color: red;
-  bottom: -15px; }
+  bottom: -20px;
+  font-size: 0.9rem; }
 
 modal.invalid {
   position: absolute;
@@ -542,6 +551,8 @@ img {
   text-transform: uppercase;
   margin-right: 5rem;
   font-family: "Futura DemiC", sans-serif; }
+  .logo__link:hover {
+    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.1); }
 
 .nav__item {
   text-decoration: none;
@@ -556,6 +567,8 @@ img {
   color: #E3B873;
   text-decoration: none;
   border-bottom: 1px solid #E3B873; }
+  .phone:hover {
+    border-bottom: none; }
 
 .contacts__phone {
   margin-right: 45px; }
@@ -656,6 +669,8 @@ img {
     transform: rotate(90deg);
     line-height: 0.8;
     font-size: 1.1rem; }
+    .instagram__link:hover {
+      box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.1); }
     .instagram__link::after {
       content: '';
       width: 50px;
@@ -966,6 +981,8 @@ img {
   text-decoration: none;
   color: #E3B873;
   pointer: cursor; }
+  .text-phone:hover {
+    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.1); }
 
 .modal {
   opacity: 0;
@@ -1028,9 +1045,17 @@ img {
     padding: 19px 22px;
     width: 15.2rem; }
 
+@media screen and (max-width: 1370px) {
+  .logo__link {
+    margin-right: 2rem; } }
+
 @media screen and (max-width: 1330px) {
   html {
     font-size: 0.8rem; } }
+
+@media screen and (max-width: 1260px) {
+  .nav__item {
+    margin-right: 2rem; } }
 
 @media screen and (max-width: 1215px) {
   html {
@@ -1053,6 +1078,10 @@ img {
     margin-right: 0; } }
 
 @media screen and (max-width: 992px) {
+  .phone:hover {
+    border-bottom: 1px solid #E3B873; }
+  .logo__link:hover {
+    box-shadow: none; }
   .nav {
     display: none; }
   .hero__instagram {
@@ -1060,7 +1089,14 @@ img {
   .hero__content {
     margin-left: 0; }
   .card__title {
-    font-size: 1rem; } }
+    font-size: 1rem; }
+  .video__play:hover {
+    width: 145px;
+    height: 145px; }
+  .button:hover {
+    box-shadow: none; }
+  .button--primary:hover {
+    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2); } }
 
 @media screen and (max-width: 810px) {
   .row {
@@ -1164,8 +1200,6 @@ img {
     min-height: 20rem; } }
 
 @media screen and (max-width: 440px) {
-  .butto:hover {
-    box-shadow: none; }
   .swiper-slide__text {
     margin-right: 0; }
   .logo__link {
@@ -1184,7 +1218,8 @@ img {
     display: none; }
   .section.design {
     background: #131313;
-    color: #fff; }
+    color: #fff;
+    padding-bottom: 0; }
   .hero {
     margin-top: -2px;
     margin-left: -13px;
@@ -1265,14 +1300,21 @@ img {
   .swiper-wrapper-image {
     height: 202px; }
   .footer {
+    margin-top: -10px;
     background: #131313; }
     .footer__content {
       display: flex;
       flex-direction: column; }
     .footer__info {
-      order: 1; }
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      order: 1;
+      padding: 0; }
     .footer__map {
-      height: 255px; }
+      height: 255px;
+      margin-bottom: 41px;
+      width: 100%; }
     .footer__input-group {
       flex-basis: 100%; }
     .footer__menu {
@@ -1283,8 +1325,18 @@ img {
       margin-bottom: 46px; }
     .footer__input {
       padding: 0.3px; }
+    .footer__policy {
+      margin-bottom: 47px; }
+    .footer__form {
+      margin-bottom: 46px; }
+    .footer__text {
+      margin: 0;
+      margin-bottom: 26px; }
     .footer__wrap {
+      margin: 0;
       padding: 0.5px; }
+    .footer__button {
+      flex-basis: 100%; }
   .input {
     background-color: transparent;
     border: none;
