--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -15,16 +15,22 @@
       color: $light
       box-shadow: 0px 5px 15px rgba($primary, 0.2)
       transition: box-shadow 0.3s 
-      &:hover
-         box-shadow: none
+      &:hover         
          box-shadow: 0px 5px 15px rgba($primary, 0.5)
    &--outline
       border: 1px solid $light
       background-color: transparent
       color: $light
+.video
+   &__play      
+      &:hover        
+         width: 155px
+         height: 155px        
 .item
    &--primary
       color: $primary
+      &:hover
+            box-shadow: 0px 5px 15px rgba($primary, 0.1)
 .label
    font-family: "Futura BookC", sans-serif   
    font-weight: 400
@@ -48,17 +54,21 @@
          color: $light
    &.invalid
       border-bottom: 1px solid red 
+      margin-bottom: 2px
 
 footer.invalid
    position: absolute
    color: red 
-   bottom: -15px
+   bottom: -28px
    margin: 0  
+   font-size: 0.9rem
+   margin: 5px
 
 control.invalid
    position: absolute
    color: red
-   bottom: -15px
+   bottom: -20px
+   font-size: 0.9rem
    
 
 modal.invalid
@@ -66,6 +76,7 @@ modal.invalid
    color: red  
    bottom: -20px 
    left: 0
+   
    
      
         
