--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -90,4 +90,5 @@
         text-decoration: none 
         color: $primary       
         pointer: cursor
-    
+        &:hover
+            box-shadow: 0px 5px 15px rgba($primary, 0.1)
