--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -19,6 +19,8 @@
         text-transform: uppercase
         margin-right: 5rem  
         font-family: "Futura DemiC", sans-serif 
+        &:hover
+            box-shadow: 0px 5px 15px rgba($primary, 0.1)
 .nav
     &__item
         text-decoration: none
@@ -28,11 +30,13 @@
         transition: color 0.2s
         &:hover
             color: $primary
+        
 .phone
     color: $primary
     text-decoration: none        
     border-bottom: 1px solid  $primary
-    
+    &:hover
+        border-bottom: none
     
 
 
