--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -53,6 +53,7 @@
         max-width: 80px
         height: 100%   
         font-family: "Futura DemiC", sans-serif 
+        
     &__scroll-down
          position: absolute
          display: flex
@@ -70,14 +71,13 @@
          font-size: 12px
          z-index: 3
          &::after
-             content: ''
-             background: url('../img/arrow-down.svg') no-repeat center
-             width: 30px
-             height: 30px
-             border: 2px solid $primary
-             border-radius: 50%
-             margin-left: 12px
-     
+            content: ''
+            background: url('../img/arrow-down.svg') no-repeat center
+            width: 30px
+            height: 30px
+            border: 2px solid $primary
+            border-radius: 50%
+            margin-left: 12px     
 .instagram
     display: flex
     justify-content: center
@@ -92,6 +92,8 @@
         transform: rotate(90deg)
         line-height: 0.8
         font-size: 1.1rem
+        &:hover
+            box-shadow: 0px 5px 15px rgba($primary, 0.1)
           
         &::after
             content: ''
