--- a/css/style.css
+++ b/css/style.css
@@ -406,6 +406,7 @@ modal.invalid {
   position: absolute;
   color: red;
   bottom: -20px;
+  font-size: 0.9rem;
   left: 0; }
 
 .policy__checkbox {
