--- a/css/style.css
+++ b/css/style.css
@@ -406,7 +406,8 @@ modal.invalid {
   position: absolute;
   color: red;
   bottom: -20px;
-  left: 0; }
+  left: 0;
+  font-size: 0.85rem; }
 
 .policy__checkbox {
   opacity: 0;
@@ -979,8 +980,7 @@ img {
 
 .text-phone {
   text-decoration: none;
-  color: #E3B873;
-  pointer: cursor; }
+  color: #E3B873; }
   .text-phone:hover {
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.1); }
 
@@ -988,7 +988,7 @@ img {
   opacity: 0;
   visibility: hidden;
   position: fixed;
-  z-index: 1100;
+  z-index: 3;
   left: 0;
   top: 0;
   bottom: 0;
@@ -1044,6 +1044,49 @@ img {
     align-self: flex-end;
     padding: 19px 22px;
     width: 15.2rem; }
+
+.alert {
+  z-index: 4;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none; }
+
+.popup {
+  position: absolute;
+  width: 509px;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 40px;
+  background: #131313;
+  font-family: 'Yeseva One', cursive;
+  font-weight: 500;
+  color: #E3B873;
+    color-font-size: 24px; }
+
+.popup_title {
+  font-size: 24px;
+  text-align: center; }
+
+.close-popup {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 28px;
+  height: 28px;
+  cursor: pointer;
+  background: transparent url("../img/close.svg") no-repeat center; }
+
+.close-alert {
+  border: none; }
 
 @media screen and (max-width: 1370px) {
   .logo__link {
