--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,6 +12,7 @@
 @import 'templates/projects'
 @import 'templates/footer'
 @import 'templates/modal'
+@import 'templates/alert'
 
 
 @import 'media'
