--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -5,7 +5,7 @@
     url('../fonts/FuturaBookC.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
-    font-display: wrap;
+    font-display: swap;
     }
     @font-face {
         font-family: 'Futura DemiC';
@@ -14,5 +14,5 @@
         url('../fonts/FuturaDemiC.woff2') format('woff2');
         font-weight: normal;
         font-style: normal;
-        font-display: wrap;
+        font-display: swap;
     }
