--- a/sass/templates/_map.sass
+++ b/sass/templates/_map.sass
@@ -1,12 +1,13 @@
 .ymap-container 
+  display: block   
   position: relative
   overflow: hidden
   cursor: pointer
-  background: url('../img/yandex-map.webp') no-repeat
-  background-position: center center
-  background-size: cover
-  box-shadow: 0 0 2em  0 rgba(0,0,0,.2)
-
+  background: url('../img/yandex-map.png') no-repeat
+  background-position: center
+  background-size: 925px  
+  // box-shadow: 0 0 2em  0 rgba(0,0,0,.2)
+  
  
 /* Блок, в котором появится Яндекс.Карта */
 #map-yandex 
@@ -31,7 +32,7 @@
   color: #000000
   transition: opacity .7s ease
   opacity: 0
-  background-color: rgba(0,0,0,.55)
+  // background-color: rgba(0,0,0,.55)
 
  
 .loader:after,
