--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -9,7 +9,8 @@
    line-height: 15px
    &:hover
       cursor: pointer
-      box-shadow: 0px 5px 15px rgba($primary, 0.2)
+      box-shadow: 0px 5px 15px rgba($primary, 0.5)
+     
    &--primary
       background-color: $primary
       color: $light
@@ -17,6 +18,7 @@
       transition: box-shadow 0.3s 
       &:hover         
          box-shadow: 0px 5px 15px rgba($primary, 0.5)
+         color: $dark
    &--outline
       border: 1px solid $light
       background-color: transparent
@@ -30,7 +32,9 @@
    &--primary
       color: $primary
       &:hover
-            box-shadow: 0px 5px 15px rgba($primary, 0.1)
+         box-shadow: 0px 5px 15px rgba($primary, 0.4)
+         color: $light         
+            
 .label
    font-family: "Futura BookC", sans-serif   
    font-weight: 400
@@ -54,22 +58,15 @@
          color: $light
    &.invalid
       border-bottom: 1px solid red 
-      margin-bottom: 2px
+      
 
-footer.invalid
-   position: absolute
-   color: red 
-   bottom: -28px
-   margin: 0  
-   font-size: 0.9rem
-   margin: 5px
+  
 
 control.invalid
    position: absolute
    color: red
    bottom: -20px
-   font-size: 0.9rem
-   
+   font-size: 0.9rem 
 
 modal.invalid
    position: absolute
@@ -78,7 +75,11 @@ modal.invalid
    font-size: 0.9rem
    left: 0
    font-size: 0.85rem
-   
+footer.invalid
+   position: absolute
+   color: red 
+   bottom: -18px   
+   font-size: 0.9rem   
      
         
    
@@ -117,7 +118,7 @@ modal.invalid
       border: 2px solid $dark
       border-radius: 50%
       opacity: 0.5    
-      
+      background-color: $primary
       &:hover
          opacity: 1    
 
