--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -4,7 +4,7 @@
 html
     font-size: 14px  
 body
-    font-family: 'Futura Book', sans-serif
+    font-family: "Futura BookC", sans-serif
     font-size: 1rem
 img
     max-width: 100%
