--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -1,4 +1,5 @@
 .control
+    
     &__section-title
         margin-bottom: 2.2rem
         margin-top: -28rem 
@@ -22,10 +23,14 @@
     &__text
         max-width: 40.785rem
         margin: auto
-        margin-bottom: 4.5rem
+        margin-bottom: 4.3rem
         text-align: center
-        font-size: 1.428rem
-        line-height: 2.4rem
+        font-family: "Futura BookC", cursive
+        font-weight: 400
+        font-size: 20px
+        line-height: 34px
+        text-align: center
+        color: #363636
         &::before
             content: ''
             display: block
