--- a/sass/templates/_design.sass
+++ b/sass/templates/_design.sass
@@ -4,10 +4,24 @@
         max-width: 740px           
         margin-left: auto
         margin-right: auto
-        text-align: center
-        font-size: 20px
-        line-height: 27px
+        text-align: center        
         margin-bottom: 2.85rem
-
-    
+        font-family: "Futura BookC"        
+        font-weight: 400
+        font-size: 20px
+        line-height: 34px
+        color: #363636
+.card
+    &__pricetag
+        position: absolute
+        left: 0
+        bottom: -1.79rem
+        font-size: 1.2rem
+        font-family: 'Yeseva One', cursive
+        font-weight: 400
+        text-transform: uppercase
+        background-color: $primary
+        color: $light
+        width: 228px
+        
     
