--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -2,6 +2,8 @@
     background: $dark url('../img/footer-bg.webp') no-repeat center / cover
     padding-top: 3rem
     &__wrap
+        display: flex
+        flex-direction: column
         background: $dark url('../img/bgLine.svg') no-repeat center
         background-color: $black
         max-width: 63.07rem
@@ -9,7 +11,7 @@
         margin-top: -15rem
         padding: 2.5rem   
         margin-bottom: 2rem  
-
+        background-size: cover
                 
     &__title
         font-family: 'Yeseva One', cursive
@@ -26,7 +28,8 @@
         margin: auto
         justify-content: space-between    
     &__input
-        padding-top: 0.3rem
+        position: relative
+        padding-top: 2px
         &-group
             position: relative
             display: flex
@@ -45,10 +48,11 @@
         align-items: center                 
         flex-basis: 100%
         margin-bottom: 3.6rem
-        margin-left: -11px 
-        
-         
-         
+        margin-left: -11px     
+        font-family: "Futura BookC", cursive            
+        font-weight: 400
+        font-size: 16px
+        line-height: 22px        
     &__button
         margin: auto
         font-size: 15px
@@ -66,20 +70,21 @@
         
     &__text
         font-family: 'Yeseva One', cursive           
-        font-weight: 500
+        font-weight: 400
         font-size: 20px
         line-height: 28px
         text-align: center
         color: $primary
         text-transform: uppercase
         margin-bottom: 26px
-    &__img
-        margin-bottom: 43px
-    &-image
-        margin-right: 10px
+    &__link
+        margin-bottom: 3rem
+    &-mail
+        margin-right: 15px                            
     &__menu
         background-color: $dark
-        padding: 4.285rem 0
+        padding: 48px 0
+        
     &__map
         margin: auto
         min-height: 465px
@@ -90,4 +95,16 @@
         text-decoration: none 
         color: $primary               
         &:hover
-            box-shadow: 0px 5px 15px rgba($primary, 0.1)
+            color: $light
+            border-bottom: 1px solid $primary
+
+
+.mail-img
+    &:hover
+        border-radius: 50%
+        box-shadow: 0px 5px 15px rgba($primary, 0.5)
+.instagram-img
+    &:hover
+        border-radius: 50%
+        box-shadow: 0px 5px 15px rgba($primary, 0.5)
+            
