--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -19,8 +19,9 @@
         text-transform: uppercase
         margin-right: 5rem  
         font-family: "Futura DemiC", sans-serif 
-        &:hover
-            box-shadow: 0px 5px 15px rgba($primary, 0.1)
+        &:hover   
+            color: $light         
+            box-shadow: 0px 5px 15px rgba($primary, 0.5)
 .nav
     &__item
         text-decoration: none
@@ -30,14 +31,20 @@
         transition: color 0.2s
         &:hover
             color: $primary
+            box-shadow: 0px 5px 15px rgba($primary, 0.5)
         
 .phone
     color: $primary
     text-decoration: none        
     border-bottom: 1px solid  $primary
+    font-family: "Futura DemiC"    
+    font-weight: 500
+    font-size: 14px
+    line-height: 16px
     &:hover
         border-bottom: none
-    
+        color: $light         
+        box-shadow: 0px 5px 15px rgba($primary, 0.5)
 
 
 .contacts
