--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -54,30 +54,38 @@
         height: 100%   
         font-family: "Futura DemiC", sans-serif 
         
-    &__scroll-down
-         position: absolute
-         display: flex
-         justify-content: center
-         align-items: center
-         left: 0
-         bottom: 0   
-         min-width: 17.6rem
-         min-height: 6.92rem 
-         background-color: $dark
-         text-transform: uppercase
-         text-decoration: none
-         color: $light
-         font-family: 'Yeseva One', cursive
-         font-size: 12px
-         z-index: 3
-         &::after
-            content: ''
-            background: url('../img/arrow-down.svg') no-repeat center
-            width: 30px
-            height: 30px
-            border: 2px solid $primary
-            border-radius: 50%
-            margin-left: 12px     
+    &__scroll
+        position: absolute
+        display: flex
+        justify-content: center
+        align-items: center
+        left: 0
+        bottom: 0   
+        min-width: 17.6rem
+        min-height: 6.92rem 
+        background-color: $dark
+        text-transform: uppercase
+        text-decoration: none
+        color: $light
+        font-family: 'Yeseva One', cursive
+        font-size: 12px
+        z-index: 3 
+        &-down            
+            display: flex
+            align-items: center   
+            text-decoration: none 
+            color: $light
+            &::after
+                content: ''
+                background: url('../img/arrow-down.svg') no-repeat center
+                width: 30px
+                height: 30px
+                border: 2px solid $primary
+                border-radius: 50%
+                margin-left: 12px 
+            &:hover
+                font-size: 18px
+                      
 .instagram
     display: flex
     justify-content: center
@@ -93,8 +101,9 @@
         line-height: 0.8
         font-size: 1.1rem
         &:hover
-            box-shadow: 0px 5px 15px rgba($primary, 0.1)
-          
+            box-shadow: 0px 5px 15px rgba($primary, 0.4)
+            color: $light         
+             
         &::after
             content: ''
             width: 50px
