--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -2,7 +2,7 @@
     opacity: 0
     visibility: hidden
     position: fixed
-    z-index: 3
+    z-index: 199
     left: 0
     top: 0
     bottom: 0
@@ -21,6 +21,7 @@
         position: relative
         max-width: 36.36rem
         background: $dark url('../img/bgLine.svg') no-repeat center
+        background-size: cover        
         padding: 2.357rem 3.5rem 1.928rem
         color: $light
         
@@ -57,6 +58,10 @@
     &__policy
         position: relative
         margin-bottom: 2.7rem
+        font-family: "Futura BookC"        
+        font-weight: 400
+        font-size: 16px
+        line-height: 22px
     &__button
         align-self: flex-end
         padding: 19px 22px
