--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -34,9 +34,8 @@
         text-transform: uppercase
         background-color: $primary
         color: $light
-        padding: 1.214rem 3rem
-
-
+        padding: 1.214rem 
+        text-align: center
 
     
 
